testdata/baselines/reference/submodule/compiler/jsdocResolveNameFailureInTypedef.errors.txt
/a.js(2,12): error TS2304: Cannot find name 'Ty'.


==== /a.js (1 errors) ====
    /**
     * @param {Ty} x
               ~~
!!! error TS2304: Cannot find name 'Ty'.
     */
    function f(x) {}
    
    /**
     * @typedef {CantResolveThis} Ty
     */
    